js/src/tests/test262/built-ins/Error/cause_property.js
var
message
=
"
my
-
message
"
;
var
cause
=
{
message
:
"
my
-
cause
"
}
;
var
error
=
new
Error
(
message
{
cause
}
)
;
verifyProperty
(
error
"
cause
"
{
configurable
:
true
enumerable
:
false
writeable
:
true
value
:
cause
}
)
;
verifyProperty
(
new
Error
(
message
)
"
cause
"
undefined
)
;
verifyProperty
(
new
Error
(
message
{
cause
:
undefined
}
)
"
cause
"
{
value
:
undefined
}
)
;
reportCompare
(
0
0
)
;
